<resources>
    <string name="kakao_scheme">kakaoa96b48a3aba5a417baf369ce5f8f5117</string>
    <!-- toolbar title -->
    <string name="toolbar_search">검색</string>
    <string name="toolbar_now_playing">현재 상영중</string>
    <string name="toolbar_up_coming">개봉 예정작</string>
    <string name="toolbar_bookmark">즐겨찾기</string>

    <!-- text -->
    <string name="text_load_more">더보기</string>
    <string name="text_movie_overview_title">줄거리</string>
    <string name="text_cast_title">출연진</string>
    <string name="text_rate_title">평점</string>
    <string name="text_photo_title">포토</string>
    <string name="text_movie_info_title">기본정보</string>
    <string name="text_cast_info_title">출연/제작</string>
    <string name="text_gallery_info_title">갤러리</string>
    <string name="text_vote_average_title">평점</string>
    <string name="text_cast_detail_title">인물 상세</string>
    <string name="text_trailer_title">%1$s 예고편 검색 결과</string>
    <string name="text_tmdb">TMDB</string>
    <string name="text_naver">NAVER</string>
    <string name="text_filter">필터</string>
    <string name="text_filter_title">정렬 기준</string>
    <string name="home_popular_movie_title">인기 영화</string>
    <string name="text_confirm">확인</string>
    <string name="text_runtime_title">상영 시간</string>
    <string name="text_release_date_title">국내 개봉일</string>
    <string name="text_bookmark_empty_title">저장한 영화가 없어요.</string>
    <string name="text_bookmark_empty_sub_title">영화 상세페이지의 ♡를 눌러서 관심있는 영화를 저장해보세요.</string>
    <string name="text_home_button">홈으로 이동하기</string>
    <string name="text_share_title">%s 공유하기</string>
    <string name="text_share_kakao_title">카카오톡으로 공유하기</string>
    <string name="text_share_other_title">다른 앱으로 공유하기</string>

    <!-- description -->
    <string name="tooltip_banner_description">TMDB API 서비스를 통해 수집된 정보입니다.</string>
    <string name="description_date_picker">날짜를 선택하는 영역입니다.</string>
    <string name="description_rate">영화 평점을 나타내는 아이콘입니다.</string>
    <string name="description_settings_options">상세 설정으로 진입합니다.</string>

    <!-- action -->
    <string name="action_share_chooser_title">[무비사이드] %s 링크</string>
    <string name="action_movie_detail_deep_link">[무비사이드] 에서 공유받은 영화를 확인해보세요!\n👉 아래 링크를 클릭하면 해당 영화 상세페이지로 이동합니다.\n%s</string>
    <string name="action_kakao_share_common_error">잠시 후에 다시 시도해주세요.</string>
    <string name="action_kakao_share_not_install">카카오톡 앱을 설치해주세요.</string>
    <string name="action_send_mail_title">무비사이드 개발자 문의하기</string>
</resources>